# nadekodon-rs

./: .gitignore  AppImageBuilder.yml  README.md  pubspec.yaml
.github/workflows/: build.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/theme/: app_theme.dart
lib/ui/pages/: download_page.dart  home_page.dart  settings_page.dart  system_page.dart
lib/ui/widgets/: app_drawer.dart  app_snackbar.dart  double_spin_box.dart  spin_box.dart  window_controls.dart
lib/ui/widgets/components/: dir_choose.dart
lib/ui/widgets/dialog/: add_download.dart  replace_file.dart  view_logs.dart  ytdl_download_view.dart
lib/utils/: color_utils.dart  defaults.dart  helper.dart  log_entry.dart  log_service.dart  logger.dart  settings.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
native/hub/: Cargo.toml
native/hub/src/: lib.rs
native/hub/src/downloader/: main.rs  manager.rs  mod.rs  worker.rs
native/hub/src/signals/: mod.rs
native/hub/src/utils/: helper.rs  logger.rs  mod.rs  settings.rs  time.rs  types.rs  url.rs  ytdlp.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+13 files in other folders)
