[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2024"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
wildcard_imports = "deny"

[dependencies]
rinf = "8.7.2"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
async-trait = "0.1.87"
messages = "0.3.1"
reqwest = { version = "0.12.23", features = ["json", "stream", "gzip", "brotli", "deflate", "http2", "rustls-tls", "blocking"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
uuid = { version = "1.18.0", features = ["v4"] }
time = { version = "0.3.41", features = ["macros", "formatting", "parsing"] }
bytes = "1.10.1"
futures = "0.3.31"
anyhow = "1.0.99"
thiserror = "2.0.16"
governor = "0.10.1"
nonzero_ext = "0.3.0"
dashmap = "6.1.0"
openssl = { version = "0.10.74", features = ["vendored"] }
indexmap = { version = "2.2.6", features = ["serde"] }

# Uncomment below to target the web.
# tokio_with_wasm = { version = "0.8.5", features = ["rt", "macros", "time"] }
# wasm-bindgen = "0.2.100"

[package.metadata.cargo-machete]
ignored = ["openssl"]
